# paradigm-pool

./: README.md
01-haskell/: My.hs
02-haskell/: DoOp.hs  Makefile
03-haskell/: Game.hs  Tree.hs
04-am-c/: Makefile
04-pm-c/: .gitignore  Makefile  int_list_add.c  int_list_del.c  int_list_get.c  int_list_info.c  list_add.c  list_del.c  list_get.c  list_info.c  map_getters.c  map_setters.c  queue_getters.c  queue_setters.c  stack_getters.c  stack_setters.c
05-c/: Makefile  common.h  my_str_to_words.c  string.h  string_01.c  string_02.c  string_03.c  string_04.c  string_05.c  string_06.c
07-am-c++/: .gitignore  Admiral.cpp  Admiral.hpp  Borg.cpp  Borg.hpp  BorgQueen.cpp  BorgQueen.hpp  Exam.cpp  Exam.hpp  Federation.cpp  Federation.hpp  Makefile  WarpSystem.cpp  WarpSystem.hpp
09-c++/: Enchanter.cpp  Enchanter.hpp  ICharacter.hpp  Knight.cpp  Knight.hpp  Paladin.cpp  Paladin.hpp  Peasant.cpp  Peasant.hpp  Priest.cpp  Priest.hpp
10-c++/: ABerry.cpp  ABerry.hpp  ACitrus.cpp  ACitrus.hpp  AFruit.cpp  AFruit.hpp  ANut.cpp  ANut.hpp  (+12 more)
c++-project/: .gitignore  .gitmodules  CMakeLists.txt  readme.md
c++-project/include/console/: Battery.hpp  BatteryModule.hpp  Cpu.hpp  CpuModule.hpp  Info.hpp  InfoModule.hpp  Process.hpp  ProcessModule.hpp  RamModule.hpp  Theme.hpp  WindowManager.hpp
c++-project/include/console/interfaces/: IManager.hpp  IModule.hpp  ITheme.hpp
c++-project/include/graphical/: CoreModule.hpp  RamModule.hpp  WindowManager.hpp
c++-project/include/graphical/components/: CoreDisplay.hpp  RamDisplay.hpp
c++-project/include/graphical/interfaces/: IDisplay.hpp  IManager.hpp  IModule.hpp
c++-project/include/shared/: Themes.hpp
c++-project/include/shared/components/: CPUData.hpp  MemoryData.hpp  NetworkData.hpp  ProcessData.hpp
c++-project/sources/: App.cpp
c++-project/sources/console/: Battery.cpp  BatteryModule.cpp  Cpu.cpp  CpuModule.cpp  Info.cpp  InfoModule.cpp  Process.cpp  ProcessModule.cpp  RamModule.cpp  Theme.cpp  WindowManager.cpp
c++-project/sources/graphical/: CoreModule.cpp  MenuModule.cpp  RamModule.cpp  WindowManager.cpp
c++-project/sources/graphical/components/: CoreDisplay.cpp  RamDisplay.cpp
c++-project/sources/shared/: Themes.cpp
c++-project/sources/shared/components/: CPUData.cpp  MemoryData.cpp  NetworkData.cpp  ProcessData.cpp
(+130 files in other folders)
